--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -1,7 +1,6 @@
 /**********************************************************/
 /*MEDIA QUERY*/
-
-@media screen and (min-width: $widthTablet) {
+@media screen and (min-width: $widthCell) {
     .menu{
         font-size:  $widthTabletFont;    
     }
@@ -30,8 +29,8 @@
         grid-template-rows: 3fr 3fr;
         justify-content:center space-between;
         align-items: center;
-        grid-row-gap: 40px;
-        grid-column-gap: 40px;
+        grid-row-gap: 30px;
+        grid-column-gap: 30px;
     }
 
     .mainGallery {
@@ -48,7 +47,53 @@
         display: none;
     }
 }
+@media screen and (min-width: $widthTablet) {
+    .menu{
+        font-size:  $widthTabletFont;    
+    }
 
+    .mainContact {
+        @include grid-set (main, grid, 1rem, 1rem);
+        grid-template-areas: "formulario infoContact"
+                            "formulario infoContact";
+        align-content: center;
+        justify-content: space-around;
+        justify-items: center;
+    }
+
+    .mainAboutUs {
+        @include grid-set (main,grid,0.5rem, 0.5rem);
+        grid-template-areas: "mainAboutUsH2 mainAboutUsH2"
+            "mainAboutUsImage mainAboutUsP"
+            "mainAboutUsImage mainAboutUsP";
+        justify-content: center;
+        justify-items: center;
+    }
+
+    .serviceSelection {
+        @include grid-set (ServicesSelection,grid,0, 0);
+        grid-template-columns: 3fr 3fr 3fr ;
+        grid-template-rows: 3fr 3fr;
+        justify-content:center space-between;
+        align-items: center;
+        grid-row-gap: 30px;
+        grid-column-gap: 30px;
+    }
+
+    .mainGallery {
+        @include grid-set (main,grid,1.2rem, 0.5rem);
+        align-content: center;
+        justify-content: space-around;
+        justify-items: center;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat($cantGalleryItems/2, 1fr);
+        gap: 0.2rem;
+    }
+
+    .mainGalleryCarousel {
+        display: none;
+    }
+}
 @media screen and (min-width: $widthHD1360) {
     .menu{
         font-size: $widthHD1360Font;    
