--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -43,7 +43,7 @@ $sizeFontReviewsP:20px;
 $sizeFontReviewsLi:15px;
 
 //Mediaquerys
-
+$widthCell: 575px;
 $widthTablet: 720px;
 $widthHD1360: 1360px;
 $cantGalleryItems: 8;
