--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,34 +1,34 @@
 /*******************************************/
 /*Pagina Inicio */
 .mainInit {
-    @include grid-set (main, grid, 1rem, 1rem);
+    @include grid-set (main, grid, 0,0);
     grid-template-areas: "mainInitVideo"
         "mainInitP";
     align-content: center;
-    justify-content: center;
     justify-items: center;
 }
 
 .mainInitP {
-    @include grid-set (mainInitP, 0, 0.2rem, 0.2rem);
+    @include grid-set (mainInitP, 0, 0.5rem, 0.5rem);
     text-align: center;
     font-size: 1rem;
 }
 
 .mainInitVideo {
-    @include grid-set (mainInitVideo, 0, 0.2rem, 0.2rem);
+    @include grid-set (mainInitVideo, 0, 0.5rem, 0.5rem);
     width: 100%;
-    .img{
-        height: 100px;
-    }
 }
 .itemImageInicio {
-    @extend .itemImage;
-    max-height: 300px;
-    max-width:100%;
+    max-height: 400px;
+    min-width:100%;
+    width: 100%;
+    border-radius: 2rem;
+    border: 3px solid $colorSecundarioMenu;
+    box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1);
 }
 .itemInfoInicio{
-    @extend .itemInfo;
+    text-align: center;
+    background-color: transparent;
     p{
         color: white;
         font-size: 30px;
