--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@
   height: 100vh;
   padding-bottom: 5px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 0.25fr 0.5fr 3fr 0.1fr;
+  grid-template-rows: 0.25fr 0.25fr 3fr 0.1fr;
   grid-template-areas: "header header header header" "nav nav nav nav" "main main main main" "footer footer footer footer"; }
 
 /* estilos del titulo principal */
@@ -26,6 +26,7 @@
 
 .headerLogo {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 7rem;
@@ -39,6 +40,11 @@
   animation-timing-function: linear; }
 
 .headerLogoTitle {
+  color: black;
+  font-size: 20px;
+  text-decoration: solid; }
+
+.headerLogoSubTitle {
   color: black;
   font-size: 20px;
   text-decoration: solid; }
@@ -114,42 +120,43 @@
 .mainInit {
   grid-area: main;
   display: grid;
-  margin: 0;
-  padding: 0;
+  margin: 0.2rem;
+  padding: 0.2rem;
   grid-template-areas: "mainInitVideo" "mainInitP";
   align-content: center;
   justify-items: center; }
-
-.mainInitP {
-  grid-area: mainInitP;
-  margin: 0.5rem;
-  padding: 0.5rem;
-  text-align: center;
-  font-size: 1rem; }
 
 .mainInitVideo {
   grid-area: mainInitVideo;
   margin: 0.5rem;
   padding: 0.5rem;
-  width: 100%; }
-
-.itemImageInicio {
-  max-height: 400px;
-  min-width: 100%;
   width: 100%;
-  border-radius: 2rem;
-  border: 3px solid #94bbe9;
-  box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1); }
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 50vh;
+  background: transparent; }
+  .mainInitVideo a {
+    text-decoration: none;
+    color: inherit;
+    font-size: 30px; }
+  .mainInitVideo .mainInitP {
+    font-weight: 700;
+    text-align: center;
+    font-size: 36px;
+    background: linear-gradient(90deg, #42C2FF, #94bbe9, #42C2FF);
+    letter-spacing: 5px;
+    background-repeat: no-repeat;
+    background-size: 80%;
+    animation: shine 5s linear infinite;
+    position: relative; }
 
-.itemInfoInicio {
-  text-align: center;
-  background-color: transparent; }
-  .itemInfoInicio p {
-    color: white;
-    font-size: 30px;
-    width: auto;
-    align-self: center;
-    border-radius: 5px; }
+@keyframes shine {
+  0% {
+    background-position-x: -500%; }
+  100% {
+    background-position-x: 500%; } }
 
 /*******************************************/
 /*Pagina Servicios Main*/
@@ -161,7 +168,7 @@
   grid-template: "ServicesSelection" "SeccionKids" "SeccionEventosCorp" "SeccionCattering" "SeccionBodas";
   justify-content: center space-between;
   align-items: center;
-  grid-template-rows: 1fr 1fr 1fr 1fr; }
+  grid-template-rows: 0.2fr 0.5fr 0.5fr 0.5fr 0.5fr; }
 
 /*.mainServices {
     @include grid-set (main, grid, 1rem, 1rem);
@@ -204,7 +211,7 @@
 
 .sectionClass p {
   text-align: center;
-  font-size: 12px; }
+  font-size: 20px; }
 
 /*contendor :tarjeta de los eventos
   Dentro de este
@@ -316,7 +323,7 @@ p {
   margin: 0.5rem;
   padding: 0.5rem;
   text-align: center;
-  font-size: 12px; }
+  font-size: 14px; }
 
 /***********************************************************/
 /*Pagina Galeria Main*/
@@ -582,7 +589,7 @@ p {
   .mainGalleryCarousel {
     display: none; } }
 
-@media screen and (min-width: 720px) {
+@media screen and (min-width: 900px) {
   .menu {
     font-size: 18px; }
   .mainContact {
@@ -608,7 +615,7 @@ p {
     margin: 0;
     padding: 0;
     grid-template-columns: 3fr 3fr 3fr;
-    grid-template-rows: 3fr 3fr;
+    grid-template-rows: 1fr 1fr;
     justify-content: center space-between;
     align-items: center;
     grid-row-gap: 30px;
